# AlharamAppsAnalytics

./: .gitignore  README.md  evaluate_sentiment.py  evaluate_sentiment_improved.py  generate_visualizations.py  pyproject.toml  requirements.txt  run_webapp.py
config/: pipeline_config.yaml
docs/: DATA_QUALITY_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PIPELINE.md  RESEARCH_PAPER.aux  RESEARCH_PAPER.out  RESEARCH_PAPER.tex  SENTIMENT_ANALYSIS_IMPROVEMENT_PLAN.md  TECHNICAL_REPORT.aux  TECHNICAL_REPORT.md  TECHNICAL_REPORT.out  TECHNICAL_REPORT.tex  TECHNICAL_REPORT.toc
output/: sentiment_evaluation_metrics.txt
scripts/: run_preprocessing.py
src/alharam_analytics/: __init__.py  pipeline.py
src/alharam_analytics/analytics/: __init__.py  dataset_analyzer.py
src/alharam_analytics/feature_engineering/: __init__.py  app_name_normalizer.py  device_mapper.py  period_tagger.py  service_classifier.py  text_feature_extractor.py
src/alharam_analytics/gender_prediction/: __init__.py  ensemble_predictor.py  hf_gender_classifier.py
src/alharam_analytics/preprocessing/: __init__.py  language_detector.py  text_cleaner.py  username_cleaner.py
src/alharam_analytics/sentiment/: __init__.py  multilingual_sentiment_analyzer.py  sentiment_analyzer.py
src/alharam_analytics/utils/: __init__.py  io_utils.py
taxonomy-diagram/: .gitignore  README.md  TaxonomyDiagram.jsx  index.html  package.json  vite.config.js
taxonomy-diagram/src/: main.jsx
webapp/: app.py
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html
