[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alharam-analytics"
version = "0.1.0"
description = "Analytics system for AlHaram mobile applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AlHaram Analytics Team"}
]
keywords = ["analytics", "hajj", "umrah", "app-reviews", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "langid>=1.1.6",
    "hijri-converter>=2.3.0",
]

[project.optional-dependencies]
gender = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "alharam-analytics[gender,dev]",
]

[project.scripts]
alharam-preprocess = "alharam_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
